# FileManager

./: Cargo.toml  Settings.toml  package-lock.json  rustfmt.toml  rusty-tags.vi  zippped
src/: findings.txt  main.rs  snippets
src/internals/: atomic_button.rs  atomic_dialog.rs  atomic_dialog_try.rs  atomic_text_view.rs  config_content  cursive_table_view.rs  delimiter.rs  file_explorer_utils.rs  file_manager.rs  file_manager_config.rs  mod.rs  poetry  unused.rs  utils.rs
src/internals/literals/: config.rs  copy_dlg.rs  copy_progress_dlg.rs  file_exists_dlg.rs  global.rs  main_ui.rs  mod.rs  zip_dlg.rs
src/internals/ops/: f2_menu.rs  f3_open.rs  f3_preview.rs  f4_open.rs  f5_cpy.rs  f6_ren_mv.rs  f8_del.rs  mod.rs
src/internals/ops/ops_utils/: archive_readers.rs  archive_types.rs  lzma.rs  mod.rs  tar.rs  zip.rs
