[package]
name = "file_explorer"
version = "0.1.0"
authors = ["artie <atch.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "*"
#cursive_table_view = "*"
rand = "0.8.2"
chrono = "0.4.19"
config = "0.9"
unicode-width = "0.1.5"
owning_ref = "0.4.1"
#used customized fs_extra = "1.2.0"
state = {version ="0.4.2",features=["tls"]}
#[dependencies]
#cursive_table_view ={ path = "../../../Repos/cursive_table_view"}
fs_extra ={ path = "../../../Repos/fs_extra"}
#[patch.crates-io.enumset_derive]
#git = "https://github.com/ocboogie/enumset"
#branch = "span-fix" 
