[package]
name = "file_explorer"
version = "0.1.0"
authors = ["artie <atch.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { path = "../../../Repos/smallB_cursive/cursive" }
#cursive_table_view = "*"
rand = "0.8.2"
chrono = "0.4.19"
unicode-width = "0.1.5"
owning_ref = "0.4.1"
state = { version = "0.4.2", features = ["tls"] }
fs_extra = { path = "../../../Repos/smallB_fs_extra" }
notify = "4.0.15"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "*"
open = "1"
zip = "0.5"
[features]
default = ["serial_cpy"]
serial_cpy = []
